--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </button>
             </div>
             <div class="product-image">
-                <img src="images/downloadgram.org_461696459_1165667781194474_2951026535375491126_n.jpg" alt="Bolo decorado">
+                <img src="images/downloadgram.org_461696459_1165667781194474_2951026535375491126_n.jpg" alt="Bolo decorado" loading="lazy">
             </div>
         </div>
     </section>
@@ -67,7 +67,7 @@
     <section id="bolos-simples" class="product-section dark fade-in">
         <div class="product-content reverse">
             <div class="product-image">
-                <img src="images/downloadgram.org_457382554_1026020162334312_7495785475087312093_n.jpeg" alt="Bolo simples">
+                <img src="images/downloadgram.org_457382554_1026020162334312_7495785475087312093_n.jpeg" alt="Bolo simples" loading="lazy">
             </div>
             <div class="product-text">
                 <h2 class="product-title">Bolos Caseirinhos</h2>
@@ -90,7 +90,7 @@
                 </button>
             </div>
             <div class="product-image">
-                <img src="images/pao.jpg" alt="Pães">
+                <img src="images/pao.jpg" alt="Pães" loading="lazy">
             </div>
         </div>
     </section>
@@ -99,59 +99,59 @@
     <section id="galeria" class="gallery-section fade-in">
         <h2 class="gallery-title">Nossos Trabalhos</h2>
         <div class="gallery-grid">
-            <div class="gallery-item"><img src="images/downloadgram.org_461696459_1165667781194474_2951026535375491126_n.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/downloadgram.org_491441920_17941518353989810_7528810505330933416_n.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/downloadgram.org_491445179_17941298519989810_5302708275154565688_n.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/downloadgram.org_500326630_17944514105989810_8843742206483996231_n.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/downloadgram.org_500445005_17944514042989810_9219063004013298111_n.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/downloadgram.org_500658581_17944514078989810_5785383886066996581_n.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/downloadgram.org_501058622_17944514033989810_8970938834600463667_n.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/downloadgram.org_501264420_17944514096989810_8872102859826452961_n.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/downloadgram.org_501542616_17944514021989810_343356933580456667_n.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/downloadgram.org_537499987_17954578145989810_7172687175539727990_n.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0001.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0003.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0005.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0008.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0016.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0018.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0020.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0022.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0025.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0028.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0030.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0033.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0035.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0038.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0040.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0043.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0045.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0048.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0050.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0053.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0055.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0060.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0063.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0065.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0068.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0070.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0073.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0075.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0078.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0080.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0083.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0085.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0088.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0090.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0093.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0095.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0098.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0100.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0105.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0110.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0115.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0120.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0125.jpg" alt="Trabalho"></div>
+            <div class="gallery-item"><img src="images/downloadgram.org_461696459_1165667781194474_2951026535375491126_n.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/downloadgram.org_491441920_17941518353989810_7528810505330933416_n.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/downloadgram.org_491445179_17941298519989810_5302708275154565688_n.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/downloadgram.org_500326630_17944514105989810_8843742206483996231_n.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/downloadgram.org_500445005_17944514042989810_9219063004013298111_n.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/downloadgram.org_500658581_17944514078989810_5785383886066996581_n.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/downloadgram.org_501058622_17944514033989810_8970938834600463667_n.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/downloadgram.org_501264420_17944514096989810_8872102859826452961_n.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/downloadgram.org_501542616_17944514021989810_343356933580456667_n.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/downloadgram.org_537499987_17954578145989810_7172687175539727990_n.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0001.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0003.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0005.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0008.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0016.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0018.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0020.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0022.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0025.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0028.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0030.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0033.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0035.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0038.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0040.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0043.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0045.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0048.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0050.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0053.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0055.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0060.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0063.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0065.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0068.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0070.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0073.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0075.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0078.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0080.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0083.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0085.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0088.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0090.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0093.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0095.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0098.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0100.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0105.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0110.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0115.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0120.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item"><img src="images/IMG-20251013-WA0125.jpg" alt="Trabalho" loading="lazy"></div>
         </div>
     </section>
 
