Add testimonials section and FAQ with toggle functionality

--- a/index.html
+++ b/index.html
@@ -163,6 +163,80 @@
         </div>
     </section>
 
+    <!-- Depoimentos -->
+    <section id="depoimentos" class="testimonials-section fade-in">
+        <h2 class="section-title">O que nossos clientes dizem</h2>
+        <div class="testimonials-grid">
+            <div class="testimonial-card">
+                <div class="stars">★★★★★</div>
+                <p class="testimonial-text">"Bolo maravilhoso! Ficou lindo e delicioso. Todos os convidados elogiaram. Super recomendo!"</p>
+                <p class="testimonial-author">- Maria Silva</p>
+            </div>
+            <div class="testimonial-card">
+                <div class="stars">★★★★★</div>
+                <p class="testimonial-text">"Atendimento impecável e o bolo superou todas as expectativas. Já é a terceira vez que peço!"</p>
+                <p class="testimonial-author">- João Santos</p>
+            </div>
+            <div class="testimonial-card">
+                <div class="stars">★★★★★</div>
+                <p class="testimonial-text">"Os bolos caseirinhos são perfeitos para o café da tarde. Sabor caseiro de verdade!"</p>
+                <p class="testimonial-author">- Ana Costa</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- FAQ -->
+    <section id="faq" class="faq-section fade-in">
+        <h2 class="section-title">Perguntas Frequentes</h2>
+        <div class="faq-container">
+            <div class="faq-item">
+                <button class="faq-question" onclick="toggleFAQ(this)">
+                    <span>Qual o prazo de entrega?</span>
+                    <span class="faq-icon">+</span>
+                </button>
+                <div class="faq-answer">
+                    <p>Bolos decorados: 7 dias | Bolos caseirinhos: 2 dias | Pães: sob consulta</p>
+                </div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question" onclick="toggleFAQ(this)">
+                    <span>Qual o pedido mínimo?</span>
+                    <span class="faq-icon">+</span>
+                </button>
+                <div class="faq-answer">
+                    <p>Bolos decorados: 1kg | Bolos caseirinhos: 1 unidade | Doces: 50 unidades | Salgados: 50 unidades</p>
+                </div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question" onclick="toggleFAQ(this)">
+                    <span>Fazem entrega?</span>
+                    <span class="faq-icon">+</span>
+                </button>
+                <div class="faq-answer">
+                    <p>Sim! Entre em contato pelo WhatsApp para consultar disponibilidade e valor da entrega na sua região.</p>
+                </div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question" onclick="toggleFAQ(this)">
+                    <span>Posso personalizar o bolo?</span>
+                    <span class="faq-icon">+</span>
+                </button>
+                <div class="faq-answer">
+                    <p>Sim! Use nosso configurador de bolos ou entre em contato pelo WhatsApp para criar um bolo único para sua festa.</p>
+                </div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question" onclick="toggleFAQ(this)">
+                    <span>Aceitam encomendas de última hora?</span>
+                    <span class="faq-icon">+</span>
+                </button>
+                <div class="faq-answer">
+                    <p>Depende da disponibilidade. Entre em contato pelo WhatsApp e verificaremos se conseguimos atender sua solicitação.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Contato -->
     <section id="contato" class="contact-section">
         <div class="contact-content">
