--- a/index.html
+++ b/index.html
@@ -106,22 +106,29 @@
     <!-- Galeria -->
     <section id="galeria" class="gallery-section fade-in">
         <h2 class="gallery-title">Nossos Trabalhos</h2>
+        <div class="gallery-filters">
+            <button class="filter-btn active" onclick="filterGallery('all')">Todos</button>
+            <button class="filter-btn" onclick="filterGallery('bolos')">Bolos Decorados</button>
+            <button class="filter-btn" onclick="filterGallery('caseirinhos')">Bolos Caseirinhos</button>
+            <button class="filter-btn" onclick="filterGallery('paes')">Pães</button>
+            <button class="filter-btn" onclick="filterGallery('doces')">Doces</button>
+        </div>
         <div class="gallery-grid">
-            <div class="gallery-item"><img src="images/downloadgram.org_461696459_1165667781194474_2951026535375491126_n.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/downloadgram.org_491441920_17941518353989810_7528810505330933416_n.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/downloadgram.org_491445179_17941298519989810_5302708275154565688_n.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/downloadgram.org_500326630_17944514105989810_8843742206483996231_n.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/downloadgram.org_500445005_17944514042989810_9219063004013298111_n.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/downloadgram.org_500658581_17944514078989810_5785383886066996581_n.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/downloadgram.org_501058622_17944514033989810_8970938834600463667_n.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/downloadgram.org_501264420_17944514096989810_8872102859826452961_n.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/downloadgram.org_501542616_17944514021989810_343356933580456667_n.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/downloadgram.org_537499987_17954578145989810_7172687175539727990_n.jpg" alt="Trabalho"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0001.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0003.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0005.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0008.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0016.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_461696459_1165667781194474_2951026535375491126_n.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_491441920_17941518353989810_7528810505330933416_n.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_491445179_17941298519989810_5302708275154565688_n.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_500326630_17944514105989810_8843742206483996231_n.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_500445005_17944514042989810_9219063004013298111_n.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_500658581_17944514078989810_5785383886066996581_n.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_501058622_17944514033989810_8970938834600463667_n.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_501264420_17944514096989810_8872102859826452961_n.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_501542616_17944514021989810_343356933580456667_n.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_537499987_17954578145989810_7172687175539727990_n.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="caseirinhos"><img src="images/IMG-20251013-WA0001.jpg" alt="Bolo Caseirinho" loading="lazy"></div>
+            <div class="gallery-item" data-category="doces"><img src="images/IMG-20251013-WA0003.jpg" alt="Doces" loading="lazy"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0005.jpg" alt="Bolo Decorado" loading="lazy"></div>
+            <div class="gallery-item" data-category="paes"><img src="images/IMG-20251013-WA0008.jpg" alt="Pães" loading="lazy"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0016.jpg" alt="Bolo Decorado" loading="lazy"></div>
             <div class="gallery-item"><img src="images/IMG-20251013-WA0018.jpg" alt="Trabalho" loading="lazy"></div>
             <div class="gallery-item"><img src="images/IMG-20251013-WA0020.jpg" alt="Trabalho" loading="lazy"></div>
             <div class="gallery-item"><img src="images/IMG-20251013-WA0022.jpg" alt="Trabalho" loading="lazy"></div>
