Add dark mode toggle and social proof section with statistics

--- a/index.html
+++ b/index.html
@@ -260,6 +260,28 @@
         </div>
     </section>
 
+    <!-- Prova Social -->
+    <section class="social-proof-section">
+        <div class="social-proof-container">
+            <div class="proof-item">
+                <div class="proof-number">500+</div>
+                <div class="proof-label">Bolos Entregues</div>
+            </div>
+            <div class="proof-item">
+                <div class="proof-number">100%</div>
+                <div class="proof-label">Satisfação</div>
+            </div>
+            <div class="proof-item">
+                <div class="proof-number">7 dias</div>
+                <div class="proof-label">Prazo Médio</div>
+            </div>
+            <div class="proof-item">
+                <div class="proof-number">5★</div>
+                <div class="proof-label">Avaliação</div>
+            </div>
+        </div>
+    </section>
+
     <!-- Contato -->
     <section id="contato" class="contact-section">
         <div class="contact-content">
