Remove Doces e salgados from hero subtitle

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section id="home" class="hero-section parallax-section">
         <div class="hero-content">
             <h1 class="hero-title">Sabor que<br>transforma momentos</h1>
-            <p class="hero-subtitle">Bolos decorados | Bolos caseirinhos | Pães artesanais | Doces e salgados</p>
+            <p class="hero-subtitle">Bolos decorados | Bolos caseirinhos | Pães artesanais</p>
             <a href="javascript:void(0)" class="hero-cta" onclick="openCakeBuilder()">
                 Monte seu bolo personalizado
             </a>
