Restore testimonials section

--- a/index.html
+++ b/index.html
@@ -186,6 +186,28 @@
         </div>
     </section>
 
+    <!-- Depoimentos -->
+    <section id="depoimentos" class="testimonials-section fade-in">
+        <h2 class="section-title">O que nossos clientes dizem</h2>
+        <div class="testimonials-grid">
+            <div class="testimonial-card">
+                <div class="stars">★★★★★</div>
+                <p class="testimonial-text">"Bolo maravilhoso! Ficou lindo e delicioso. Todos os convidados elogiaram. Super recomendo!"</p>
+                <p class="testimonial-author">- Maria Silva</p>
+            </div>
+            <div class="testimonial-card">
+                <div class="stars">★★★★★</div>
+                <p class="testimonial-text">"Atendimento impecável e o bolo superou todas as expectativas. Já é a terceira vez que peço!"</p>
+                <p class="testimonial-author">- João Santos</p>
+            </div>
+            <div class="testimonial-card">
+                <div class="stars">★★★★★</div>
+                <p class="testimonial-text">"Os bolos caseirinhos são perfeitos para o café da tarde. Sabor caseiro de verdade!"</p>
+                <p class="testimonial-author">- Ana Costa</p>
+            </div>
+        </div>
+    </section>
+
     <!-- FAQ -->
     <section id="faq" class="faq-section fade-in">
         <h2 class="section-title">Perguntas Frequentes</h2>
