--- a/index.html
+++ b/index.html
@@ -140,49 +140,49 @@
             <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_501264420_17944514096989810_8872102859826452961_n.jpg" alt="Bolo Decorado"></div>
             <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_501542616_17944514021989810_343356933580456667_n.jpg" alt="Bolo Decorado"></div>
             <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_537499987_17954578145989810_7172687175539727990_n.jpg" alt="Bolo Decorado"></div>
-            <div class="gallery-item" data-category="caseirinhos"><img src="images/IMG-20251013-WA0001.jpg" alt="Bolo Caseirinho" loading="lazy"></div>
-            <div class="gallery-item" data-category="doces"><img src="images/IMG-20251013-WA0003.jpg" alt="Doces" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0005.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="paes"><img src="images/IMG-20251013-WA0008.jpg" alt="Pães" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0016.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0018.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0020.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0022.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0025.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0028.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0030.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0033.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0035.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0038.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0040.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0043.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0045.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0048.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0050.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0053.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0055.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0060.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0063.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0065.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0068.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0070.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0073.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0075.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0078.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0080.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0083.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0085.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0088.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0090.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0093.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0095.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0098.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0100.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0105.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0110.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0115.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0120.jpg" alt="Trabalho" loading="lazy"></div>
-            <div class="gallery-item"><img src="images/IMG-20251013-WA0125.jpg" alt="Trabalho" loading="lazy"></div>
+            <div class="gallery-item" data-category="caseirinhos"><img src="images/IMG-20251013-WA0001.jpg" alt="Bolo Caseirinho"></div>
+            <div class="gallery-item" data-category="doces"><img src="images/IMG-20251013-WA0003.jpg" alt="Doces"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0005.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="paes"><img src="images/IMG-20251013-WA0008.jpg" alt="Pães"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0016.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0018.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0020.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0022.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0025.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0028.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0030.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0033.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0035.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0038.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0040.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0043.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0045.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0048.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0050.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0053.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0055.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0060.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0063.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0065.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0068.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0070.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0073.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0075.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0078.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0080.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0083.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0085.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0088.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0090.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0093.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0095.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0098.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0100.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0105.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0110.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0115.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0120.jpg" alt="Bolo Decorado"></div>
+            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0125.jpg" alt="Bolo Decorado"></div>
         </div>
     </section>
 
