update: preco bolos decorados e ajuste imagens de paes na galeria

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="product-content">
             <div class="product-text">
                 <h2 class="product-title">Bolos Decorados</h2>
-                <p class="product-description">R$ 80,00/kg | 17 massas | 3 tipos de recheios | Coberturas personalizadas</p>
+                <p class="product-description">A partir de R$ 80,00/kg | 17 massas | 3 tipos de recheios | Coberturas personalizadas</p>
                 <button class="product-cta" onclick="openCakeBuilder()">
                     Montar meu bolo
                 </button>
@@ -150,8 +150,8 @@
             <div class="gallery-item" data-category="caseirinhos"><img src="images/optimized/downloadgram.org_457522063_866805058333348_7268343729862773615_n.webp" alt="Bolo Caseirinho" loading="lazy"></div>
             <div class="gallery-item" data-category="doces"><img src="images/IMG-20251013-WA0003.jpg" alt="Doces" loading="lazy"></div>
             <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0005.jpg" alt="Bolo Decorado" loading="lazy"></div>
+            <div class="gallery-item" data-category="paes"><img src="images/pao.jpg" alt="Pães" loading="lazy"></div>
             <div class="gallery-item" data-category="paes"><img src="images/IMG-20251013-WA0008.jpg" alt="Pães" loading="lazy"></div>
-            <div class="gallery-item" data-category="paes"><img src="images/optimized/pao.webp" alt="Pães" loading="lazy"></div>
             <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0016.jpg" alt="Bolo Decorado" loading="lazy"></div>
             <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0018.jpg" alt="Bolo Decorado" loading="lazy"></div>
             <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0020.jpg" alt="Bolo Decorado" loading="lazy"></div>
