update: corrigir descricao para 7 massas e 31 sabores de recheios

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="product-content">
             <div class="product-text">
                 <h2 class="product-title">Bolos Decorados</h2>
-                <p class="product-description">A partir de R$ 80,00/kg | 17 massas | 3 tipos de recheios | Coberturas personalizadas</p>
+                <p class="product-description">A partir de R$ 80,00/kg | 7 massas | 31 sabores de recheios | Coberturas personalizadas</p>
                 <button class="product-cta" onclick="openCakeBuilder()">
                     Montar meu bolo
                 </button>
