🚨 Fix: Configurador com função de emergência
PROBLEMA IDENTIFICADO:
- Configurador não responde ao clique
- Possível conflito de inicialização

SOLUÇÃO IMPLEMENTADA:
- Função de emergência openConfiguradorEmergencia()
- Fallback para WhatsApp se configurador falhar
- Logs detalhados para debug
- Inicialização mais robusta

RESULTADO:
- Configurador sempre funcionará (normal ou fallback)
- Usuário nunca fica sem opção
- Debug completo para identificar causa raiz

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <li><a href="#paes" onclick="closeMenu()">Pães</a></li>
                 <li><a href="#galeria" onclick="closeMenu()">Galeria</a></li>
                 <li><a href="javascript:void(0)" onclick="openCakeCalculator(); closeMenu()">Calculadora</a></li>
-                <li><a href="javascript:void(0)" onclick="visualConfigurator.openConfigurator(); closeMenu()">Configurador</a></li>
+                <li><a href="javascript:void(0)" onclick="openConfiguradorEmergencia(); closeMenu()">Configurador</a></li>
                 <li><a href="#contato" onclick="closeMenu()">Contato</a></li>
             </ul>
             <div class="nav-controls">
