🎨 Fix: Adicionar tema no resumo e WhatsApp
PROBLEMA: Tema não aparecia no resumo do pedido
CORREÇÕES:
- ✅ Tema adicionado no renderSummary()
- ✅ Tema incluído no WhatsApp
- ✅ Nova aba 'Tema' no configurador
- ✅ 6 opções de tema: Clássico, Festa, Romântico, Divertido, Elegante, Infantil

RESULTADO:
- Cliente pode escolher tema específico
- Tema aparece no resumo visual
- Tema vai no pedido WhatsApp

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
     <script src="js/price-calculator.js" defer></script>
     <script src="js/reviews.js" defer></script>
     <script src="js/gallery-filters.js" defer></script>
-    <script src="js/visual-configurator.js" defer></script>
-    <script src="js/free-3d-fixed.js" defer></script>
+    <script src="js/visual-configurator.js?v=2.0" defer></script>
+    <script src="js/free-3d-fixed.js?v=2.0" defer></script>
 </body>
 </html>
