--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
     <style>
     *{margin:0;padding:0;box-sizing:border-box}
     :root{--black:#000;--white:#fff;--gray:#86868b;--light-gray:#f5f5f7;--bg-primary:#fff;--bg-secondary:#f5f5f7;--text-primary:#000;--text-secondary:#86868b;--border-color:rgba(0,0,0,.1)}
+    .dark-mode{--bg-primary:#1a1a1a;--bg-secondary:#2a2a2a;--text-primary:#fff;--text-secondary:#a0a0a0;--border-color:rgba(255,255,255,.1)}
     html{scroll-behavior:smooth}
     body{font-family:'Inter',-apple-system,BlinkMacSystemFont,sans-serif;color:var(--text-primary);background:var(--bg-primary);overflow-x:hidden}
     .navbar{position:fixed;top:0;width:100%;background:rgba(255,255,255,.8);backdrop-filter:blur(20px);z-index:1000;border-bottom:1px solid rgba(0,0,0,.1)}
@@ -140,7 +141,7 @@
                 <li><a href="#contato" onclick="closeMenu()">Contato</a></li>
             </ul>
             <div class="nav-controls">
-                <button class="theme-toggle" onclick="toggleTheme()" aria-label="Alternar tema">
+                <button class="theme-toggle" onclick="toggleDarkMode()" aria-label="Alternar tema">
                     <svg class="sun-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <circle cx="12" cy="12" r="5"/>
                         <line x1="12" y1="1" x2="12" y2="3"/>
